infra/k8s/api-gateway/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-public
  namespace: api-gateway
  labels:
    app.kubernetes.io/part-of: system-design
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
